[package]
name = "griddle"
version = "0.4.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A HashMap variant that spreads resize load across inserts"
repository = "https://github.com/jonhoo/griddle.git"

keywords = ["hash", "no_std", "hashmap", "amortized"]
categories = ["data-structures", "no-std"]

[dependencies]
# For the default hasher
ahash_ = { version = "0.6.1", default-features = false, optional = true, package = "ahash" }

hashbrown = { version = "0.9.1", default-features = false, features = ["raw"] }

# For external trait impls
rayon_ = { version = "1.0", optional = true, package = "rayon" }
serde_ = { version = "1.0.25", default-features = false, optional = true, package = "serde" }

[dev-dependencies]
lazy_static = "1.4"
rand = { version = "0.7.3", features = ["small_rng"] }
quickcheck = { version = "0.9", default-features = false }
rayon_ = { version = "1.0", package = "rayon" }
fnv = "1.0.7"
serde_test = "1.0"

[features]
default = ["ahash", "inline-more"]

ahash-compile-time-rng = ["ahash_/compile-time-rng"]
ahash = [ "ahash_", "hashbrown/ahash" ]
serde = [ "serde_", "hashbrown/serde" ]
rayon = [ "rayon_", "hashbrown/rayon" ]
raw = []

# Enables usage of `#[inline]` on far more functions than by default in this
# crate. This may lead to a performance increase but often comes at a compile
# time cost.
inline-more = [ "hashbrown/inline-more" ]

[package.metadata.docs.rs]
features = ["rayon", "serde", "raw"]

[[bench]]
name = "vroom"
harness = false
